--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,6 +159,8 @@ services:
     volumes:
       - lidarr-config:/config
       - torrent-downloads:/data
+    networks:
+      - mynetwork
 
 
   jellyfin:
