updated container images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+# version: "3.9"
 name: media-stack
 services:
 
@@ -56,7 +56,7 @@ services:
   ## Change password after install from UI --> Tools --> Options --> WebUI ##
   qbittorrent:
     container_name: qbittorrent
-    image: lscr.io/linuxserver/qbittorrent:4.6.3
+    image: lscr.io/linuxserver/qbittorrent:latest
 
     # Unomment below if vpn is enabled
     # depends_on:               # Uncomment this line if vpn is enabled
